<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>rm</groupId>
	<artifactId>tabou2</artifactId>
	<version>2.0.0</version>
	<packaging>pom</packaging>

	<!-- Propriétés du projet -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>17</java.version>
		<springframework.boot.version>3.5.7</springframework.boot.version>
		<commons.io.version>2.21.0</commons.io.version>
		<httpclient.version>4.5.14</httpclient.version>
		<commons.lang3.version>3.20.0</commons.lang3.version>
		<servlet-api.version>4.0.1</servlet-api.version>
		<jakarta.version>3.1.1</jakarta.version>
        <jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
		<springdoc.version>2.8.15</springdoc.version>
		<maven-resources-plugin.version>3.5.0</maven-resources-plugin.version>
		<apache.directory.api.version>2.1.7</apache.directory.api.version>
		<mapstruct.version>1.6.3</mapstruct.version>
		<lombok.version>1.18.26</lombok.version>
		<log4j.version>2.25.4</log4j.version>
		<openapi.plugin.version>7.21.0</openapi.plugin.version>
		<swagger.version>2.2.45</swagger.version>
		<swagger.codegen.version>2.4.14</swagger.codegen.version>
		<compiler.plugin.version>3.15.0</compiler.plugin.version>
		<surefire.plugin.version>3.5.1</surefire.plugin.version>
		<commons.collections.version>4.5.0</commons.collections.version>
		<ocpsoft.rewrite.version>10.0.2.Final</ocpsoft.rewrite.version>
		<opensagres.xdocreport.version>2.2.0</opensagres.xdocreport.version>
		<jackson-datatype.version>2.18.2</jackson-datatype.version>
		<openapitools.version>0.2.10</openapitools.version>
		<openapi.version>2.8.15</openapi.version>
		<org.hibernate.version>9.1.0.Final</org.hibernate.version>

		<maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>
		<plugin.dependency.check.maven.version>5.3.2</plugin.dependency.check.maven.version>
		<plugin.maven-jar-plugin.version>3.5.0</plugin.maven-jar-plugin.version>
		<plugin.maven-javadoc-plugin.version>3.12.0</plugin.maven-javadoc-plugin.version>
		<plugin.maven-assembly-plugin.version>3.8.0</plugin.maven-assembly-plugin.version>
		
		<!-- Configuration SONAR -->
		<sonar.projectKey>${env.SONAR_KEY}${project.artifactId}</sonar.projectKey>
		<sonar.projectName>${project.artifactId}</sonar.projectName>
		<jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
		<sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
		<sonar.exclusions>**/*Test.java, **/*Factory.java, **/*.spec.ts</sonar.exclusions>
		<sonar.test.exclusions>**/*Test.java, **/test/**/*Factory.java, **/*.spec.ts</sonar.test.exclusions>
		<sonar.coverage.exclusions>
			**/*.ts,
			**/*Entity.java,
			**/*Controller.java,
			**/*Mapper.java,
			**/*Exception.java,
			**/*Bean.java
		</sonar.coverage.exclusions>
		<sonar.cpd.exclusions>
			**/*Entity.java,
			**/*.html,
			**/*.*ss
		</sonar.cpd.exclusions>


        <hibernate-spatial.version>6.6.13.Final</hibernate-spatial.version>
        <jts-core.version>1.20.0</jts-core.version>
    </properties>

	<!-- Modules du projet -->
	<modules>
		<module>tabou2-facade</module>
		<module>tabou2-service</module>
		<module>tabou2-storage</module>
	</modules>

	<dependencyManagement>
		<dependencies>

			<!-- Modules -->
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-facade</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-service</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-front</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>tabou2-storage</artifactId>
				<version>${project.version}</version>
			</dependency>

			<!--
			https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-slf4j-impl</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-to-slf4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-core</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-jul</artifactId>
				<version>${log4j.version}</version>
			</dependency>


			<!-- Spring Boot -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${springframework.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
				<exclusions>
					<exclusion>
						<groupId>org.springframework.boot</groupId>
						<artifactId>spring-boot-starter-logging</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-log4j2</artifactId>
				<version>${springframework.boot.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-starter-webflux</artifactId>
				<version>${springframework.boot.version}</version>
			</dependency>

			<!--Commons dependencies -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>${commons.io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons.lang3.version}</version>
			</dependency>

			<!--
			https://mvnrepository.com/artifact/org.apache.commons/commons-collections4 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>${commons.collections.version}</version>
			</dependency>

			<!-- Swagger dependencies -->
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-models</artifactId>
				<version>${swagger.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${swagger.version}</version>
			</dependency>


			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-api</artifactId>
				<version>${springdoc.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc.version}</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-common</artifactId>
				<version>${openapi.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.directory.api</groupId>
				<artifactId>api-all</artifactId>
				<version>${apache.directory.api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>

			<!-- Map Struct -->
			<dependency>
				<groupId>org.mapstruct</groupId>
				<artifactId>mapstruct</artifactId>
				<version>${mapstruct.version}</version>
			</dependency>

			<!--
			https://mvnrepository.com/artifact/org.ocpsoft.rewrite/rewrite-integration-spring -->
			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-integration-spring</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<!--
			https://mvnrepository.com/artifact/org.ocpsoft.rewrite/rewrite-impl -->
			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-impl</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<dependency>
				<groupId>org.ocpsoft.rewrite</groupId>
				<artifactId>rewrite-servlet</artifactId>
				<version>${ocpsoft.rewrite.version}</version>
			</dependency>

			<!-- persistence -->
			<dependency>
				<groupId>org.hibernate.validator</groupId>
				<artifactId>hibernate-validator</artifactId>
				<version>${org.hibernate.version}</version>
			</dependency>

			<dependency>
				<groupId>jakarta.validation</groupId>
				<artifactId>jakarta.validation-api</artifactId>
				<version>${jakarta.version}</version>
			</dependency>

            <dependency>
                <groupId>jakarta.validation</groupId>
                <artifactId>jakarta.validation-api</artifactId>
                <version>${jakarta.version}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.annotation</groupId>
                <artifactId>jakarta.annotation-api</artifactId>
                <version>${jakarta.annotation-api.version}</version>
            </dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet-api.version}</version>
				<scope>provided</scope>
			</dependency>

			<!-- mapper -->
			<dependency>
				<groupId>com.github.joschi.jackson</groupId>
				<artifactId>jackson-datatype-threetenbp</artifactId>
				<version>${jackson-datatype.version}</version>
			</dependency>

			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>${openapitools.version}</version>
			</dependency>

			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.document.odt</artifactId>
				<version>${opensagres.xdocreport.version}</version>
			</dependency>

			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.template.freemarker</artifactId>
				<version>${opensagres.xdocreport.version}</version>
			</dependency>

			<dependency>
				<groupId>fr.opensagres.xdocreport</groupId>
				<artifactId>fr.opensagres.xdocreport.converter.odt.odfdom</artifactId>
				<version>${opensagres.xdocreport.version}</version>
			</dependency>

			<dependency>
				<groupId>org.locationtech.jts</groupId>
				<artifactId>jts-core</artifactId>
				<version>${jts-core.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hibernate</groupId>
				<artifactId>hibernate-spatial</artifactId>
				<version>${hibernate-spatial.version}</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-jetty</artifactId>
		</dependency>
		<dependency>
			<groupId>jakarta.validation</groupId>
			<artifactId>jakarta.validation-api</artifactId>
		</dependency>

		<dependency>
			<groupId>jakarta.annotation</groupId>
			<artifactId>jakarta.annotation-api</artifactId>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-maven-plugin</artifactId>
					<version>${springframework.boot.version}</version>
				</plugin>
				<!-- Swagger -->
				<plugin>
					<groupId>org.openapitools</groupId>
					<artifactId>openapi-generator-maven-plugin</artifactId>
					<version>${openapi.plugin.version}</version>
				</plugin>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
				</plugin>

				<!-- Generate Lombok annotation then Mapstruct classes -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${compiler.plugin.version}</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<showDeprecation>true</showDeprecation>
						<showWarnings>true</showWarnings>
						<encoding>${project.build.sourceEncoding}</encoding>
						<annotationProcessorPaths>
							<path>
								<groupId>org.projectlombok</groupId>
								<artifactId>lombok</artifactId>
								<version>${lombok.version}</version>
							</path>
							<path>
								<groupId>org.mapstruct</groupId>
								<artifactId>mapstruct-processor</artifactId>
								<version>${mapstruct.version}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>${plugin.maven-jar-plugin.version}</version>
				</plugin>
				<!-- Crée un jar contenant les javadocs du projet -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${plugin.maven-javadoc-plugin.version}</version>
					<configuration>
						<source>11</source>
						<failOnError>false</failOnError>
						<doclint>none</doclint>
						<quiet>true</quiet>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${plugin.maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>${ant.plugin.version}</version>
				</plugin>
				<!-- tests unitaires -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
					<configuration>
						<argLine>-Dfile.encoding=UTF-8 --add-opens
							java.base/java.util=ALL-UNNAMED</argLine>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
				</plugin>

			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<excludes>
						<exclude>**/*.ts</exclude>
						<exclude>**/*Test.java</exclude>
						<exclude>**/*Controller.java</exclude>
						<exclude>**/*Mapper.java</exclude>
						<exclude>**/*Exception.java</exclude>
						<exclude>**/*Bean.java</exclude>
					</excludes>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>@{argLine}</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
